# zoty

./: LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: build_zotero_plugin.py  smoke_mcp.py  verify_wheel_xpi.py
src/zoty/: __init__.py  __main__.py  cli.py  connector.py  db.py  fulltext_bridge.py  rdp.py  server.py  setup.py
src/zoty/assets/: __init__.py  zoty-bridge.xpi
tests/: test_cli.py  test_connector.py  test_db.py  test_fulltext_bridge.py  test_server.py  test_setup.py
zotero-plugin/: bootstrap.js  build.sh  manifest.json
